search bar and search results added

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,8 +20,11 @@
     "plugins": [
       "cypress",
       "jest",
-      "node"
+      "node",
+      "react-hooks"
     ],
     "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn"
     }
 }
