--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "ejs": "^3.1.9",
     "jwt-decode": "^3.1.2",
     "mongoose": "^7.3.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "nodemon": "^3.0.1"
   }
 }
